# HoMIE

./: .gitattributes  .gitignore  AnimationZ.m  AverageImage.m  CalculateTemplate.m  CleanImages.m  Collimation.m  Decon.asv  Decon.m  DifferenceFrame.m  DifferenceStack.m  EstimateFlops.m  FLOPS.m  FWHM.m  GenerateDetailedSubplot.m  GenerateFrameAnimation.m  GenerateGraph.m  GenerateGraphMOD.m  GenerateZAnimation.m  ImportImages.m  IrrMainFreddie.m  IrradianceFreddie.m  IrradianceFunc.m  Irradiance_Eric.m  Main.asv  Main.m  Main2.m  MainGPU.m  MainGenerateTemplates.m  MainTemp.m  Main_MOD.m  PARreconFunc.m  ParAverageImage.m  PlotFrame.m  README.md  ReconstructImages.m  Reconstructor.m  ReconstructorCombo.m  ReconstructorGPU.m  ReconstructorGPUMOD.m  (+29 more)
CPP/: AverageImage.cpp  CMakeCache.txt  CMakeLists.txt  CalculateTemplate.cpp  Commands.txt  DifferenceStack.cpp  ImportImages.cpp  Makefile  PlotFrame.cpp  Recon  Reconstructor.cpp  Reconstructor_Kanka1.cpp  defs.cpp  dtypes.hpp  header.hpp  linspace.cpp  loadCommands.cpp  loop_defs.cpp  loop_dtypes.cpp  loop_header.hpp  loop_main.cpp  loop_recon  main.cpp  saveFunctions.cpp  start_commands  take_commands  take_commands.cpp  temp.cpp
Deconvolution/: Decon.m  Decon2.m  MainGenerateTestHologram.m  PlotFrame.m  generateDHMHologram2D.m  img_decon.m
Image Reconstruction/: CMakeCache.txt  CalculateTemplate.cpp  Commands.txt  DifferenceStack.cpp  HoMIE  ImportImages.cpp  ImportTemplates.cpp  Makefile  Recon  Reconstruct_tile.cpp  Reconstructor.cpp  Reconstructor_Kanka_Mod.cpp  cmake_install.cmake  defs.cpp  dtypes.cpp  header.hpp  linspace.cpp  loadCommands.cpp  loop_defs.cpp  loop_dtypes.cpp  loop_main.cpp  loop_recon  loop_recon.cpp  main.cpp  saveFunctions.cpp  start_commands  take_commands  temp.cpp
Images to Power Output/: Bins_2_Irradiance.py  Image_Processing.m
Irradiance/: Collimation.m  IrrMainFreddie.m  IrradianceFunc.m  Irradiance_Eric.m
MATLAB/: Main.m  ReconstructorKanka1.m  Reconstructor_Kanka1.m  flop.m
MTF/: Slanted_Edge_Analysis.m  Slanted_Edge_Analysis_1row.m  Slanted_Edge_Analysis_EntireImage.m  Slanted_Edge_Real.m
Matlab/: AverageImage.m  CleanImages.m  DifferenceFrame.m  ImportImages.m  Main.m  MainGenerateTemplates.m  MainGenerateTestHologram.m  MainNew.m  MainSwitches.m  PlotFrame.m  ReconstructorKanka1.m  ReconstructorKanka2.m  ReconstructorKanka2Mod.m  generateDHMHologram2D.m  main2.m  mainRead.m  readComplexMat.m
Motion Detection/: CMakeCache.txt  CMakeLists.txt  CalculateLinearity.cpp  ContourDetect.cpp  EuclidianDistance.cpp  FeatureDetectionTest.m  FindSearchRadius.cpp  GroupParticles.cpp  MDtest.cpp  Makefile  RandomDirection.cpp  RandomObjects.cpp  RemoveElements.cpp  RemovePositions.cpp  SingleFrameDetect  SingleFrameDetect.cpp  SingleFrameDetect.m  cam_test.cpp  cmake_install.cmake  object.cpp  openCV_test  openCV_test.cpp  test  test.cpp  vgt4.m
Pixl_test/: CMakeLists.txt
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenCVExample  Writer.cpp  average_image.cpp  backup.cpp  calculate_template.cpp  calculate_template.h  cmake_install.cmake  difference_stack.cpp  get_files_names_in_directory.cpp  import_images.cpp  main.cpp  main2.cpp  plot_frame.cpp  temp.cpp
