cmake_minimum_required(VERSION 2.8)
project( HoMIE )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( openCV_test openCV_test.cpp )
target_link_libraries( openCV_test ${OpenCV_LIBS} )
add_executable(SingleFrameDetect SingleFrameDetect.cpp)
target_link_libraries(SingleFrameDetect ${OpenCV_LIBS})
add_executable(test test.cpp)
target_link_libraries(test ${OpenCV_LIBS})