cmake_minimum_required(VERSION 2.8)
project( HoMIE )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
##add_executable(ContourDetect ContourDetect.cpp)
##target_link_libraries(ContourDetect ${OpenCV_LIBS})
add_executable(GroupParticles GroupParticles.cpp)
target_link_libraries(GroupParticles ${OpenCV_LIBS})