cmake_minimum_required(VERSION 2.8)
project( HoMIE )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
##add_executable(ContourDetect ContourDetect.cpp)
##target_link_libraries(ContourDetect ${OpenCV_LIBS})
##add_executable(GroupParticles GroupParticles.cpp)
##target_link_libraries(GroupParticles ${OpenCV_LIBS})
##add_executable(TestThings TestThings.cpp)
##target_link_libraries(TestThings ${OpenCV_LIBS})
##add_executable(RandomDirection RandomDirection.cpp)
##target_link_libraries(RandomDirection ${OpenCV_LIBS})
##add_executable(RandomObjects RandomObjects.cpp)
##target_link_libraries(RandomObjects ${OpenCV_LIBS})
##add_executable(CalculateLinearity CalculateLinearity.cpp)
##target_link_libraries(CalculateLinearity ${OpenCV_LIBS})
add_executable(MDtest MDtest.cpp)
target_link_libraries(MDtest ${OpenCV_LIBS})